# mkopo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TESTING_GUIDE.md
api/: .env.example  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_init.py  0002_loan_metadata.py  0003_embeddings.py  0004_chunk_tsv.py  0005_eval.py  0006_autonomy.py  0007_loan_class.py  0008_llm_call_error_detail.py  0009_agent_steps.py  0010_agent_steps_updated_at.py  0011_document_content_hash.py  0012_user_auth.py  0013_soft_delete_retention.py  0014_tool_uses.py  0015_prompts.py  0016_cost_and_errors.py  0017_annotations.py  0018_llm_call_parent_step.py  0019_llm_call_prompt_version.py  0020_institution_settings.py  0021_injection_detections.py
api/evals/: __init__.py  runner.py  types.py
api/evals/tasks/: __init__.py  aal_fidelity.py  adversarial_injection.py  decision_verdict.py  extract_appraised_value.py  extract_borrower_entity.py  extract_credit_score.py  extract_loan_amount.py  extract_noi.py  intake_email.py  summarize_underwriting.py  tool_call_accuracy.py  uw_groundedness.py
api/mkopo/: __init__.py  config.py  db.py  deps.py  llm_gateway.py  main.py  startup_check.py  telemetry.py
api/mkopo/agents/: __init__.py  _base.py  _serde.py  context.py  decision.py  guardrails.py  injection.py  intake.py  orchestrator.py  streaming.py  tool_chat_loop.py  underwriting.py
api/mkopo/models/: __init__.py  annotation.py  audit.py  base.py  document.py  embedding.py  errors.py  eval.py  injection.py  institution.py  loan.py  magic_link.py  party.py  prompt.py  user.py
api/mkopo/routers/: __init__.py  agents.py  auth.py  borrower_auth.py  borrower_chat.py  borrower_loans.py  borrower_portal.py  documents.py  evals.py  loans.py  observability.py  parties.py  prompts.py  review.py  safety.py  search.py  settings.py  staff_auth.py  (+3 more)
api/scripts/: harden_s3_bucket.py  run_all_monitors.py  run_retention_sweep.py  seed.py  seed_eval_baseline.py
api/tests/: test_auth_service.py  test_calibration_math.py  test_challenge_gate.py  test_chunking.py  test_comms_magic_link.py  test_eval_summary_pairing.py  test_fairness_math.py  test_injection_detector.py  test_loans.py  test_loop_bounds.py  test_materials_hash.py  test_personal_rules.py  test_prompt_drift_math.py  test_psi_math.py  test_redis_client.py  test_refusal_math.py  test_rules.py  test_safety_scenarios.py  test_staff_auth_jwt.py  test_storage_authz.py  test_tool_trajectory.py  test_unwrap_interrupt.py
(+286 files in other folders)
