[project]
name = "mkopo"
version = "0.1.0"
description = "AI-first loan origination for private lenders"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
  # Web framework
  "fastapi[standard]>=0.136.0,<0.137.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.20",
  # Database
  "sqlalchemy[asyncio]>=2.0.46,<2.1.0",
  "asyncpg>=0.30.0",
  "psycopg[binary]>=3.2.0",          # used by LangGraph PostgresSaver
  "alembic>=1.16.0",
  "pgvector>=0.4.0",
  # Settings / config
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0",
  # LLM + agents
  "anthropic>=0.102.0",
  "langgraph>=1.1.10,<2.0.0",
  "langgraph-checkpoint-postgres>=3.1.0",
  "langchain-anthropic>=1.0.0",
  # Queue / background
  "arq>=0.28.0",
  "redis>=5.2.0",
  # Email
  "resend>=2.0.0",
  # Storage (S3 + local FS)
  "boto3>=1.35.0",
  "aioboto3>=14.0.0",
  # Eval harness
  "pyyaml>=6.0.0",
  # Observability
  "structlog>=24.4.0",
  "opentelemetry-api>=1.30.0",
  "opentelemetry-sdk>=1.30.0",
  "opentelemetry-instrumentation-fastapi>=0.51b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.63b0",
  "opentelemetry-exporter-otlp-proto-http>=1.42.0",
  "openai>=2.37.0",
  "tiktoken>=0.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.28.0",
  "ruff>=0.9.0",
  "mypy>=1.14.0",
  "ipython>=8.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mkopo", "evals"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "ASYNC"]

[tool.ruff.lint.flake8-bugbear]
# The modern FastAPI idiom is `Annotated[T, Depends(...)]` (see mkopo/deps.py),
# so we no longer have function calls in default arguments. `File` is the one
# exception — `UploadFile = File(...)` is still the cleanest way to declare
# upload fields, so we keep it on the immutable list.
extend-immutable-calls = ["fastapi.File"]

[tool.ruff.lint.per-file-ignores]
# storage.py is a local-filesystem-only implementation; the sync Path I/O
# inside async methods is intentional for this portfolio scope.
"mkopo/services/storage.py" = ["ASYNC240"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "evals"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
